--- a/Module2/Lab6/Lab6.ipynb
+++ b/Module2/Lab6/Lab6.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
        "(171.0323076132764, 175.90102572005694)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
        "(0.20248138545542083, 0.3118043288302934)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
        "(0.1869856177645281, 0.3273000965211861)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,16 +152,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x1f7a9529c40>"
+       "<seaborn.axisgrid.FacetGrid at 0x1cd47efa850>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
        "(12.738323034095384, 45.247362283932624)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
        "(9.747211034407501, 10.252788965592499)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
        "424.69"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,27 +296,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1380.12"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3138\n"
+     ]
     }
    ],
    "source": [
     "# your code here\n",
     "\n",
-    "z80 = 0.85\n",
     "\n",
-    "min_sample = (z80 / 0.01)**2 * lossmean * (1 - lossmean)\n",
-    "round(min_sample, 2)\n"
+    "confidenceLevel = .8\n",
+    "possibilities    = 2\n",
+    "alpha           = (1 - confidenceLevel)/possibilities\n",
+    "z_critical = st.norm.ppf(1 - alpha)\n",
+    "error = 0.01\n",
+    "min_population = z_critical**2*(27/105*(105-27)/105)/(error**2)\n",
+    "print(math.ceil(min_population))"
    ]
   },
   {
@@ -339,11 +340,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6.303419026585921, 25.69658097341408)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "N1 = 418 - 402\n",
+    "N2 = math.sqrt(26**2/40+22**2/50)\n",
+    "\n",
+    "st.norm.interval(alpha=0.94, loc=N1, scale=N2)"
    ]
   }
  ],
@@ -363,7 +380,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.12"
   },
   "toc": {
    "base_numbering": 1,
